crates/tree-sitter-tolk/grammar.js
    source_file: $ => repeat($._top_level_declaration),

    // ----------------------------------------------------------
    // top-level declarations

    _top_level_declaration: $ =>
        choice(
            $.tolk_required_version,
            $.import_directive,
            $.contract_declaration,
            $.global_var_declaration,
            $.constant_declaration,
            $.type_alias_declaration,
            $.struct_declaration,
            $.enum_declaration,
            $.function_declaration,
            $.method_declaration,
            $.get_method_declaration,
            $.empty_statement,
        ),

    enum_declaration: $ =>
        seq(
            optional(field("annotations", $.annotation_list)),
            "enum",
            field("name", $.identifier),
            optional(seq(":", field("backed_type", $._type_hint))),
            optional(field("body", $.enum_body)),
        ),
    enum_body: $ =>
        seq(
            "{",
            optional(
                seq(
                    $.enum_member_declaration,
                    repeat(seq(optional(choice(",", ";")), $.enum_member_declaration)),
                ),
            ),
            optional(choice(",", ";")),
            "}",
        ),
    enum_member_declaration: $ =>
        seq(field("name", $.identifier), optional(seq("=", field("default", $._expression)))),

    // ----------------------------------------------------------
    // functions and their body

    _function_body: $ =>
        choice(
            field("body", $.block_statement),
            field("asm_body", $.asm_body),
            field("builtin_specifier", $.builtin_specifier),
        ),

    function_declaration: $ =>
        seq(
            optional(field("annotations", $.annotation_list)),
            "fun",
            field("name", $.identifier),
            optional(field("type_parameters", $.type_parameters)),
            optional(field("parameters", $.parameter_list)),
            optional(seq(":", field("return_type", optional($._type_hint)))),
            optional($._function_body),
        ),

    method_receiver: $ => seq(field("receiver_type", $._type_hint), "."),
    method_declaration: $ =>
        seq(
            optional(field("annotations", $.annotation_list)),
            "fun",
            field("receiver", $.method_receiver),
            field("name", $.identifier),
            optional(field("type_parameters", $.type_parameters)),
            optional(field("parameters", $.parameter_list)),
            optional(seq(":", field("return_type", optional($._type_hint)))),
            optional($._function_body),
        ),
    get_method_declaration: $ =>
        seq(
            optional(field("annotations", $.annotation_list)),
            "get",
            optional("fun"),
            field("name", $.identifier),
            optional(field("parameters", $.parameter_list)),
            optional(seq(":", field("return_type", optional($._type_hint)))),
            optional(field("body", $._function_body)),
        ),

    annotation_list: $ => repeat1($.annotation),
    annotation_name: _ => /[a-zA-Z0-9_.]+/,
    annotation: $ =>
        seq(
            "@",
            optional(field("name", $.annotation_name)),
            optional(field("arguments", $.annotation_arguments)),
        ),

    annotation_arguments: $ =>
        seq(
            "(",
            optional(choice(field("type", $._type_hint), field("values", commaSep1($._expression)))),
            optional(","),
            ")",
        ),

    type_parameters: $ => seq("<", commaSep($.type_parameter), optional(","), ">"),
    type_parameter: $ =>
        seq(field("name", $.identifier), optional(seq("=", field("default", $._type_hint)))),

    parameter_list: $ => seq("(", commaSep($.parameter_declaration), optional(","), ")"),
    parameter_declaration: $ =>
        seq(
            field("mutate", optional("mutate")),
            field("name", $.identifier),
            optional(seq(":", field("type", $._type_hint))),
            optional(seq("=", field("default", $._expression))),
        ),

    asm_body: $ =>
        prec.right(
            seq(
                "asm",
                optional(field("rearrange", $.asm_body_rearrange)),
                repeat1($.string_literal),
                optional(";"),
            ),
        ),

    asm_body_rearrange: $ =>
        seq(
            "(",
            optional(field("params", $.asm_body_rearrange_params)),
            optional(field("return", $.asm_body_rearrange_return)),
            ")",
        ),

    asm_body_rearrange_params: $ => repeat1($.identifier),
    asm_body_rearrange_return: $ => seq("->", repeat($.number_literal)),

    _statement_require_semicolon_unless_last: $ =>
        choice(
            // $.local_vars_declaration,
            $.return_statement,
            $.do_while_statement,
            $.break_statement,
            $.continue_statement,
            $.throw_statement,
            $.assert_statement,
            $.expression_statement,
        ),
    _statement: $ =>
        choice(
            $._statement_ending_with_brace,
            prec.right(seq($._statement_require_semicolon_unless_last, optional(";"))),
        ),

    // local_vars_declaration: $ =>
    //     seq(
    //         field("kind", choice("var", "val")),
    //         field("lhs", $.var_declaration_lhs),
    //         optional(seq("=", field("assigned_val", $._expression))),
    //     ),

    block_statement: $ =>
        prec.dynamic(
            100,
            seq(
                "{",
                repeat($._statement),
                optional($._statement_require_semicolon_unless_last),
                "}",
            ),
        ),

    expression_statement: $ => $._expression,

    // ----------------------------------------------------------
    // expressions

    _expression: $ =>
        choice(
            $.var_declaration_lhs,
            $.assignment,
            $.set_assignment,
            $.ternary_operator,
            $.binary_operator,
            $.unary_operator,
            $.lazy_expression,
            $.cast_as_operator,
            $.is_type_operator,
            $.not_null_operator,
            $.dot_access,
            $.function_call,
            $.generic_instantiation,
            $.parenthesized_expression,
            $.match_expression,
            $.object_literal,
            $.tensor_expression,
            $.typed_tuple,
            $.lambda_expression,
            $.number_literal,
            $.string_literal,
            $.boolean_literal,
            $.null_literal,
            $.underscore,
            $.identifier,
        ),

    _comparison_lt_gt: $ =>
        prec.left(15, seq($._expression, field("operator_name", $._brackets_lt_gt), $._expression)),

    binary_operator: $ =>
        choice(
            prec.right(10, seq($._expression, field("operator_name", "??"), $._expression)),
            prec.left(
                13,
                seq($._expression, field("operator_name", choice("&&", "||")), $._expression),
            ),
            prec.left(
                14,
                seq($._expression, field("operator_name", choice("&", "|", "^")), $._expression),
            ),
            prec.left(
                15,
                seq(
                    $._expression,
                    field("operator_name", choice("==", "!=", "<=", ">=", "<=>")),
                    $._expression,
                ),
            ),
            $._comparison_lt_gt,
            prec.left(
                17,
                seq(
                    $._expression,
                    field("operator_name", choice("<<", ">>", "~>>", "^>>")),
                    $._expression,
                ),
            ),
            prec.left(
                20,
                seq($._expression, field("operator_name", choice("-", "+")), $._expression),
            ),
            prec.left(
                30,
                seq(
                    $._expression,
                    field("operator_name", choice("*", "/", "%", "~/", "^/")),
                    $._expression,
                ),
            ),
        ),

    dot_access: $ =>
        prec(
            80,
            seq(
                field("obj", $._expression),
                ".",
                field("field", choice($.identifier, $.numeric_index)), // for method call, dot_access is wrapped into function_call, "field" actually means method name
            ),
        ),

    function_call: $ =>
        prec.left(
            90,
            seq(
                field("callee", $._expression), // callee can be generic_instantiation or dot_access
                field("arguments", $.argument_list),
            ),
        ),
    argument_list: $ => seq("(", commaSep($.call_argument), optional(","), ")"),
    generic_instantiation: $ =>
        prec(
            10,
            seq(field("expr", $._expression), field("instantiationTs", $.instantiationT_list)),
        ),
    instantiationT_list: $ =>
        prec.dynamic(
            1,
            seq(
                // prec.dynamic is important
                "<",
                field("types", commaSep1($._type_hint)),
                optional(","),
                ">",
            ),
        ),

    lambda_expression: $ =>
        prec.right(
            seq(
                "fun",
                field("parameters", $.parameter_list),
                optional(seq(":", field("return_type", optional($._type_hint)))),
                optional(field("body", $._function_body)),
            ),
        ),

    // ----------------------------------------------------------
    // type system

    _type_hint: $ =>
        prec.dynamic(
            100,
            choice(
                alias($.identifier, $.type_identifier),
                $.type_instantiatedTs,
                $.tensor_type,
                $.tuple_type,
                $.parenthesized_type,
                $.fun_callable_type,
                $.nullable_type,
                $.union_type,
                $.null_literal,
            ),
        ),

    type_instantiatedTs: $ =>
        prec.dynamic(
            104,
            seq(
                field("name", alias($.identifier, $.type_identifier)),
                field("arguments", $.instantiationT_list),
            ),
        ),

    tensor_type: $ =>
        prec.dynamic(
            103,
            choice(seq("(", ")"), seq("(", commaSep2($._type_hint), optional(","), ")")),
        ),
    // Like tensors, tuple types share syntax with literals. Keep both parses until
    // the context distinguishes a type such as `[[]]` from a nested tuple value.
    tuple_type: $ =>
        prec.dynamic(103, seq("[", optional(seq(commaSep1($._type_hint), optional(","))), "]")),
    nullable_type: $ => prec.right(110, seq(field("inner", $._type_hint), "?")),
    union_type: $ =>
        prec.right(
            102,
            seq(
                optional("|"),
                field("lhs", $._type_hint),
                "|",
                field("rhs", $._type_hint),
                optional("|"),
            ),
        ),

    // ----------------------------------------------------------
    // common constructions

    number_literal: $ =>
        token(choice(seq("0x", /[0-9a-fA-F_]+/), seq("0b", /[01_]+/), /[0-9][0-9_]*/)),
    string_literal: $ =>
        token(
            choice(
                // Escapes consume the following character, including a quote that would
                // otherwise be mistaken for the start of the closing delimiter.
                seq(
                    '"""',
                    repeat(seq(optional(choice('"', '""')), choice(/[^"\\]/, /\\[\s\S]/))),
                    '"""',
                ),
                seq('"', repeat(choice(/[^"\\\n]/, /\\./)), '"'),
            ),
        ),
    identifier: $ => /`[^`]+`|[a-zA-Z$_][a-zA-Z0-9$_]*/,
